--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- 1. Change the Title to Home -->
+    <!-- 1. Change the Title to Home... -->
     <title>Title</title>
 </head>
 <!-- 2. Change the background-color to "burlywood" in the body tag. -->
