--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <!-- 2. Change the background-color to "burlywood" in the body tag. -->
 <body> 
+    This is a random change.
    <!-- 3. Create Hyperlinks that Link All 3 pages together.-->
    <ul>
        <li>Home</li>
